# fastapi-template

./: README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile
